[package]
name = "tui_confirm_dialog"
version = "0.4.0"
edition = "2021"
authors = ["Alessandro Crugnola <alessandro.crugnola@swisscom.com>"]
repository = "https://github.com/sephiroth74/tui-confirm-dialog"
description = "Ratatui dialogs"
license = "MIT"
readme = "./README.md"

[features]
default = ["crossterm"]
crossterm = ["dep:ratatui"]

[dependencies]
ratatui = { version = "0.30.0", features = ["all-widgets"], optional = true }
rand = "0.9.0"
regex = "1.11.1"

[[example]]
name = "confirm"
required-features = ["crossterm"]

[[example]]
name = "popup"
required-features = ["crossterm"]
