[package]
name = "tui_confirm_dialog"
version = "0.4.1"
edition = "2021"
authors = ["Alessandro Crugnola <alessandro.crugnola@swisscom.com>"]
repository = "https://github.com/sephiroth74/tui-confirm-dialog"
description = "Ratatui dialogs"
license = "MIT"
readme = "./README.md"

[features]
default = ["crossterm"]
crossterm = ["dep:ratatui"]

[dependencies]
ratatui-core = { version = "0.1.0", default-features = false }
ratatui-widgets = { version = "0.3.0", default-features = false }
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"], optional = true }
rand = "0.9.0"
regex = "1.11.1"

[[example]]
name = "confirm"
required-features = ["crossterm"]

[[example]]
name = "popup"
required-features = ["crossterm"]
